--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                             <a href="#web-development">
                                                 <figure class="cc-effect">
                                                     <img src="images/Weather App.png" alt="Image" />
-                                                    <a target="_blank" href="https://github.com/Abdur-Raheem-Lee/Task-12_Weather-App">
+                                                    <a target="_blank" href="https://warm-retreat-07614.herokuapp.com/">
                                                         <figcaption>
                                                             <div class="h4">Weather App Project</div>
                                                             <p>Web Development</p>
