--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
                                                 </figure>
                                             </a>
                                         </div>
+                                        <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                                            <a href="#web-development">
+                                                <figure class="cc-effect">
+                                                    <img src="images/Shopping Cart.png" alt="Image" />
+                                                    <a target="_blank" href="https://abdur-raheem-lee.github.io/Shopping_Cart/">
+                                                        <figcaption>
+                                                            <div class="h4">Shopping Cart</div>
+                                                            <p>Web Development</p>
+                                                        </figcaption>
+                                                    </a>
+                                                </figure>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
