--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                         <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                             <a href="#web-development">
                                                 <figure class="cc-effect"><img src="images/To Do List.png" alt="Image" />
-                                                    <a target="_blank" href="https://github.com/Abdur-Raheem-Lee/To-Do-List">
+                                                    <a target="_blank" href="https://whispering-reaches-58061.herokuapp.com/">
                                                         <figcaption>
                                                             <div class="h4">To Do List Project</div>
                                                             <p>Web Development</p>
