--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="profile-page sidebar-collapse">
             <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
                 <div class="container">
-                    <div class="navbar-translate">
+                    <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Abdur-Raheem Lee</a>
                         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
                     </div>
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -46,7 +46,7 @@
                                     <img src="images/pp.jpg" alt="Image" />
                                 </div>
                                 <div class="h2 title">Abdur-Raheem Lee</div>
-                                <p class="category text-white">Jack of all trades and master of some</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf"
+                                <p class="category text-white">At your Service</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf"
                                     data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                             </div>
                         </div>
