--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                                                                 <div class="row">
                                                                     <div class="card-body">
                                                                         <p class="mb-0"><strong>Phone</strong></p>
-                                                                        <p class="pb-2">081 735 0374</p>
+                                                                        <p class="pb-2"><span class="mobile-icon fa fa-mobile-phone"></span> &emsp; 081 735 0374</p>
                                                                         <p class="mb-0"><strong>Email</strong></p>
                                                                         <p>lee13october@gmail.com
                                                                             <a class="cc-email btn btn-link" href="mailto: lee13october@gmail.com">
