--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                                 <div class="h2 title">Abdur-Raheem Lee</div>
                                 <p class="category text-white">At your Service
                                 </p><a class="btn btn-primary
-                                        smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire
-                                        Me</a><a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download
-                                        CV</a>
+                                        smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                             </div>
                         </div>
                         <div class="section">
@@ -71,10 +69,7 @@
                                             btn-lg btn-icon btn-github" target="_blank" href="https://github.com/Abdur-Raheem-Lee" rel="tooltip" title="View my Github
                                             Profile"><i class="fa fa-github"></i></a><a class="btn btn-default btn-round
                                             btn-lg btn-icon btn-linkedin" target="_blank" href="https://www.linkedin.com/in/abdur-raheem-lee-357739125/" rel="tooltip" title="Find me on
-                                            LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round
-                                            btn-lg btn-icon btn-instagram-o" target="_blank" href="https://www.instagram.com/leeman_513/" rel="tooltip" title="Follow me on
-                                            Instagram"><i class="fa
-                                                fa-instagram"></i></a>
+                                            LinkedIn"><i class="fa fa-linkedin"></i></a>
                                     <a class="btn btn-default btn-round
                                             btn-lg btn-icon btn-email" href="mailto:
                                             lee13october@gmail.com" rel="tooltip" title="Drop me an
@@ -574,9 +569,6 @@
                                                                         </a>
                                                                         <a class="cc-linkedin btn btn-link" target="_blank" href="https://www.linkedin.com/in/abdur-raheem-lee-357739125/">
                                                                             <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-                                                                        </a>
-                                                                        <a class="cc-instagram btn btn-link" target="_blank" href="https://www.instagram.com/leeman_513/">
-                                                                            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
                                                                         </a>
                                                                     </div>
                                                                 </div>
