--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                                     <img src="images/pp.jpg" alt="Image" />
                                 </div>
                                 <div class="h2 title">Abdur-Raheem Lee</div>
-                                <a class="btn btn-primary
-                                        smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf" data-aos="zoom-in"
-                                    data-aos-anchor="data-aos-anchor">Download CV</a>
+                                <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+                                <a class="btn btn-primary" target="_blank" href="./Abdur-Raheem_Lee_CV.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                             </div>
                         </div>
                         <div class="section">
@@ -102,7 +101,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                        <div class="col-sm-8">22</div>
+                                        <div class="col-sm-8">23</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -110,7 +109,7 @@
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                        <div class="col-sm-8">067 957 4898</div>
+                                        <div class="col-sm-8">081 735 0374</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -274,6 +273,7 @@
                                                 title">Portfolio
                                             <p>Websites</p>
                                         </div>
+                                        <p class="h6 text-center">For all my non-website related projects please refer to my <a target="_blank" href="https://github.com/Abdur-Raheem-Lee">Github</a></p>
                                     </div>
                                 </div>
                                 <div class="tab-content gallery mt-5">
@@ -360,8 +360,25 @@
                                     </div>
                                     <div class="section" id="experience">
                                         <div class="container cc-experience">
-                                            <div class="h4 text-center mb-4 title">Experience
-                                                <p>Work / Volunteer</p>
+                                            <div class="h4 text-center mb-4 title">Experience</div>
+                                            <div class="card">
+                                                <div class="row">
+                                                    <div class="col-md-3
+                                                            bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                                                        <div class="card-body cc-experience-header">
+                                                            <p style="color: black;">Apr 2021 - Present</p>
+                                                            <div class="h5" style="color: black;">WeThinkCode_</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                                        <div class="card-body">
+                                                            <div class="h5">Intern</div>
+                                                            <p>Interning at WeThinkCode_ is an amazing experience. I am proud to be a part of their journey to growth. During my time here I helped open and manage their new Durban campus. I am part of the
+                                                                team that is upgrading their application process. They are completely overhauling their systems to become more automated as it should be. The experience so far as been phenominal and everyweek
+                                                                I'm learning and implementing new things into my book of experience.</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="card">
                                                 <div class="row">
@@ -517,7 +534,7 @@
                                                             <div class="row">
                                                                 <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/Mr Smuts.jpg" alt="Image" />
                                                                     <div class="h5 pt-2">Hugo Smuts </div>
-                                                                    <p class="category" style="font-size: 85%;">Deputy Principal</p>
+                                                                    <p class="category" style="font-size: 85%;">Former Deputy Principal</p>
                                                                 </div>
                                                                 <div class="col-lg-10 col-md-9">
                                                                     <p>Mr H. Smuts is a reference for all my cultural and extracurricular duties and activities at school.</p>
@@ -565,7 +582,7 @@
                                                                 <div class="row">
                                                                     <div class="card-body">
                                                                         <p class="mb-0"><strong>Phone</strong></p>
-                                                                        <p class="pb-2"><span class="mobile-icon fa fa-mobile-phone"></span> &emsp; 067 957 4898</p>
+                                                                        <p class="pb-2"><span class="mobile-icon fa fa-mobile-phone"></span> &emsp; 081 735 0374</p>
                                                                         <p class="mb-0"><strong>Email</strong></p>
                                                                         <p>lee13october@gmail.com
                                                                             <a class="cc-email btn btn-link" href="mailto: lee13october@gmail.com">
