--- a/index.html
+++ b/index.html
@@ -88,11 +88,8 @@
                                     <div class="h4 mt-0 title">About</div>
                                     <p>Hello! My name is Abdur-Raheem Lee. I am a tech savvy individual always looking to learn and understand more about the tech industry.</p>
                                     <p>I am more than just a fast learner, I adapt easily to new environments and I love sharing knowledge I learnt from my past experiences, despite my shy personality. I find that helping others actually help me understand
-                                        what I know better and I also learn from those whoI help.</p>
-                                    <p> I stick strongly to my belief s and I always try to carry the best version of myself. </p>
-                                    <p>For a more comprehensive look at who I am you can have a look at my CV
-                                        <b><a target="_blank"
-                                                href="./Abdur-Raheem_Lee_CV.pdf">here</a></b></p>
+                                        what I know better and I also learn from those who I help.</p>
+                                    <p> I stick strongly to my beliefs and I always try to carry the best version of myself. </p>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-12">
@@ -101,7 +98,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                        <div class="col-sm-8">23</div>
+                                        <div class="col-sm-8">25</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -109,7 +106,7 @@
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-                                        <div class="col-sm-8">081 735 0374</div>
+                                        <div class="col-sm-8">+27 81 735 0374</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -117,8 +114,7 @@
                                         </div>
                                     </div>
                                     <div class="row mt-3">
-                                        <div class="col-sm-4"><strong class="text-uppercase">Drivers
-                                                    Licence:</strong></div>
+                                        <div class="col-sm-4"><strong class="text-uppercase">Drivers Licence:</strong></div>
                                         <div class="col-sm-8">Code 8</div>
                                     </div>
                                 </div>
@@ -273,10 +269,11 @@
                                                 title">Portfolio
                                             <p>Websites</p>
                                         </div>
-                                        <p class="h6 text-center">For all my non-website related projects please refer to my <a target="_blank" href="https://github.com/Abdur-Raheem-Lee">Github</a></p>
+                                        <p class="h6 text-center">For a view of all my projects that I've worked on you can have a look at my <a target="_blank" href="https://github.com/Abdur-Raheem-Lee">Github</a>. If there's anything that interests
+                                        you please pop me an email.</p>
                                     </div>
                                 </div>
-                                <div class="tab-content gallery mt-5">
+                                <!-- <div class="tab-content gallery mt-5">
                                     <div class="tab-pane active" id="web-development">
                                         <div class="ml-auto mr-auto">
                                             <div class="row">
@@ -357,7 +354,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="section" id="experience">
                                         <div class="container cc-experience">
                                             <div class="h4 text-center mb-4 title">Experience</div>
@@ -366,16 +363,37 @@
                                                     <div class="col-md-3
                                                             bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                                         <div class="card-body cc-experience-header">
-                                                            <p style="color: black;">Apr 2021 - Present</p>
+                                                            <p style="color: black;">Aug 2022 - present</p>
+                                                            <div class="h5" style="color: black;">WeThinkCode_</div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                                        <div class="card-body">
+                                                            <div class="h5">Student Performance Administrator</div>
+                                                            <p>Myself and my team focus of providing valuable and consistent feedack to management regarding students' performance and we focus on guiding and helping students understand all that they need to 
+                                                                in order for them to reach the end of the 16-month program as competent Software Developers.
+                                                                We also build our own tooling to help make our data capturing and distribution as efficient as possible.</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="row">
+                                                    <div class="col-md-3
+                                                            bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                                                        <div class="card-body cc-experience-header">
+                                                            <p style="color: black;">Apr 2021 - Jul 2021</p>
+                                                            <p style="color: black;">Apr 2022 - Jul 2022</p>
                                                             <div class="h5" style="color: black;">WeThinkCode_</div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                                         <div class="card-body">
                                                             <div class="h5">Intern</div>
-                                                            <p>Interning at WeThinkCode_ is an amazing experience. I am proud to be a part of their journey to growth. During my time here I helped open and manage their new Durban campus. I am part of the
+                                                            <p>Interning at WeThinkCode_ was an amazing experience. I am proud to be a part of their journey to growth. During my time there I helped open and manage their new Durban campus. I am part of the
                                                                 team that is upgrading their application process. They are completely overhauling their systems to become more automated as it should be. The experience so far as been phenominal and everyweek
-                                                                I'm learning and implementing new things into my book of experience.</p>
+                                                                I'm learnt and implemented new things into my book of experience.</p>
+                                                            <p>Second round of my Internship I was introduced to a lof more of the inner workings and found myself in a permanent position in the Student Performance Administrative position.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -440,15 +458,15 @@
                                                 <div class="row">
                                                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                                         <div class="card-body cc-education-header">
-                                                            <p style="color: black;">Aug 2020 - Present</p>
-                                                            <div class="h5" style="color: black;">Information Technology</div>
+                                                            <p style="color: black;">Aug 2020 - Jul 2022</p>
+                                                            <div class="h5" style="color: black;">Software Development</div>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                                         <div class="card-body">
-                                                            <div class="h5">Systems Development</div>
+                                                            <div class="h5">Software Development</div>
                                                             <p class="category">WeThinkCode_</p>
-                                                            <p>I am currently studying at WTC_ and my time here is phenomenal. WTC_ is a place, not just to learn, but a hub to share knowledge and connect.</p>
+                                                            <p>My time at WTC_ as a student was phenomenal. WTC_ is a place, not just to learn, but a hub to share knowledge and connect.</p>
                                                             <p>WTC_ strives to create a peer-to-peer learning environment where students can learn from each other and share their experiences with each other.</p>
                                                         </div>
                                                     </div>
@@ -512,7 +530,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="section" id="reference">
+                                    <!-- <div class="section" id="reference">
                                         <div class="container cc-reference">
                                             <div class="h4 mb-4 text-center title">References</div>
                                             <div class="card" data-aos="zoom-in">
@@ -570,7 +588,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="section" id="contact">
                                         <div class="cc-contact-information">
                                             <div class="container">
@@ -595,6 +613,7 @@
                                                                         <a class="cc-linkedin btn btn-link" target="_blank" href="https://www.linkedin.com/in/abdur-raheem-lee-357739125/">
                                                                             <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
                                                                         </a>
+                                                                        <p>Updated by Abdur-Raheem Lee 2023</p>
                                                                     </div>
                                                                 </div>
                                                             </div>
