--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
                                                     <div class="col-md-3
                                                             bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                                         <div class="card-body cc-experience-header">
-                                                            <p style="color: black;">Apr 2021 - Jul 2021</p>
-                                                            <p style="color: black;">Apr 2022 - Jul 2022</p>
+                                                            <p style="color: black;">Apr 2021 - Jul 2021 
+                                                            </br>Apr 2022 - Jul 2022</p>
                                                             <div class="h5" style="color: black;">WeThinkCode_</div>
                                                         </div>
                                                     </div>
