--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="container">
                             <div class="content-center">
                                 <div class="cc-profile-image">
-                                    <img src="images/pp.jpg.jpg" alt="Image" />
+                                    <img src="images/pp.jpg" alt="Image" />
                                 </div>
                                 <div class="h2 title">Abdur-Raheem Lee</div>
                                 <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
